2006-10-09  Koji Arai  <arai@users.sourceforge.jp>

	* src/lha_macro.h (MIN): newly added a macro for below.

	* maketbl.c (make_table): applied the security patch for the
	CVE-2006-4335 and CVE-2006-4337.

	* huf.c (read_pt_len, read_c_len, decode_c_st1, decode_p_st1):
	applied the security patch for the CVE-2006-4338.

2006-10-09  Koji Arai  <arai@users.sourceforge.jp>

	* tests/lha-test.in: the function local variable `$status' is treated as
	the builtin variable on the Zsh version 4.3.2, so it was renamed to
	$exit_status.

	* tests/Makefile.am, tests/lha-test.in, tests/lha-test16, tests/lha-test16-l0.lzh, tests/lha-test16-l1.lzh, tests/lha-test16-l2.lzh, tests/lha-test16-lg.lzh:
	added tests for the header CRC.

2006-10-08  Koji Arai  <arai@users.sourceforge.jp>

	* 00readme.autoconf: updated.

	* Hacking_of_LHa: changed mail address.

2006-10-08  Koji Arai  <arai@users.sourceforge.jp>

	* configure.ac: updated version.

	* configure.ac, src/header.c, src/lha_macro.h, src/lhadd.c, src/lhext.c, src/lhlist.c, tests/lha-test12:
	re-applied the correct DJGPP patch. Thanks to Doug Kaufman.

2006-10-02  Koji Arai  <arai@users.sourceforge.jp>

	* configure.ac: updated version.

	* src/header.c, src/lha.h, src/lha_macro.h, src/lhadd.c, src/lharc.c, src/lhext.c, src/lhlist.c, src/vsnprintf.c, tests/lha-test.in, tests/lha-test11, tests/lha-test12:
	applied the patch for the DJGPP. Thanks to Doug Kaufman.

	* 00readme.autoconf, configure.ac: changed mail address.

2006-09-11  Koji Arai  <jca02266@nifty.com>

	* configure.ac: updated version.

	* src/lharc.c (print_usage): updated.

2006-09-11  Koji Arai  <jca02266@nifty.com>

	* config.h.in (HAVE_LIBAPPLEFILE): added `b' option which extract
	the MacBinary. Thanks to Hiroto Sakai.

	* configure.ac: ditto.

	* src/lha.h (decode_macbinary_contents): ditto.

	* src/lhadd.c (build_temporary_file): ditto.

	* src/lharc.c (decode_macbinary_contents, print_tiny_usage, parse_suboption): ditto.
