@@ -16,6 +16,7 @@ DUALCASE=1; export DUALCASE # for MKS sh
 : ${lha_dir=@top_builddir@/src}
 : ${lha_cmd=$(cd $lha_dir && pwd)/lha}
 : ${srcdir=@srcdir@}
+: ${builddir=$(cd @builddir@ && pwd)}
 
 trap '_stat=$?; rm -rf test-*; exit $_stat' 0 1 2 3 15
 
@@ -115,6 +116,7 @@ case `$lha --version 2>&1` in
 esac
 testsuite lha-test15
 testsuite lha-test16
+testsuite lha-test17
 
 if (( $error_num != 0 )); then
   message $error_num tests failed!
