@@ -1,3 +1,12 @@
+2007-02-24  Koji Arai  <arai@users.sourceforge.jp>
+
+	* src/header.c (copy_path_element, remove_dots, init_header):
+	should treat "foo" and "./foo" as same file, so remove "./" from
+	archived path name.
+
+	* tests/Makefile.am, tests/lha-test.in, tests/lha-test17:
+	added tests for the removing relative path.
+
 2006-10-09  Koji Arai  <arai@users.sourceforge.jp>
 
 	* src/lha_macro.h (MIN): newly added a macro for below.
